# emby-keeper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  config.example.toml  pyproject.toml  tox.ini
.claude/: settings.json
.github/workflows/: ci.yml  docker-dev.yml  docker.yml  lint.yml  pypi.yml
docs/guide/: Linux-从-PyPI-安装.md  Linux-从源码构建.md  参与开发.md  配置文件.md
docs/superpowers/plans/: 2026-04-29-black-target-version.md  2026-04-29-docker-hf-workflow-routing.md  2026-04-29-emby-keepalive-notification.md
docs/superpowers/specs/: 2026-04-29-black-target-version-design.md  2026-04-29-docker-hf-publish-design.md  2026-04-29-emby-keepalive-notification-design.md
embykeeper/: cli.py  config.py  notify.py  schema.py
embykeeper/emby/: api.py  main.py  notification.py
scripts/: docker-entrypoint-dev.sh
tests/: test_cli.py  test_dockerfile.py  test_emby_api.py  test_emby_notification.py
